# COMP4621_Project

./: .gitignore  CMakeLists.txt  Marking Scheme 2023.xlsx  README.md  chatroom.h  client.c  client_skeleton.c  server.c
report/: report.md
